...
      "comment" : "The title of the navigation bar in the entry details view.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Details"
          }
        },
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Подробнее"
...
      "comment" : "The title of a confirmation dialog that appears when the user tries to dismiss an entry details view while there are unsaved changes.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Discard Changes?"
          }
        },
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Отменить изменения?"
...
            "state" : "translated",
            "value" : "У вас есть несохранённые изменения. Вы уверены, что хотите их отменить?"
          }
        }
      }
    },
    "Hello, World!" : {
      "comment" : "A greeting message displayed in the preview.",
      "isCommentAutoGenerated" : true
    },
    "history" : {
      "comment" : "Label for the \"History\" tab in the tab view.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "History"
          }
        },
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "История"
...
      "comment" : "A placeholder text for a text input in a sheet.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Write down your thoughts"
          }
        },
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Запишите свои чувства"
...
