...
        ZStack(alignment: .top) {
            RoundedRectangle(cornerRadius: 64)
                .frame(maxWidth: .infinity)
                .accessibilityHint("openSheetCreateEntryHint")
                .accessibilityLabel("clickableAreaAccessibilityLabel")
                .accessibilityAddTraits(.isButton)
                .accessibilityIdentifier("FakeSheetClickableArea")
                .foregroundStyle(.background)
                .overlay(
                    RoundedRectangle(cornerRadius: 64)
                        .stroke(lineWidth: 2)
                        .fill(.thinMaterial)
                        .foregroundStyle(.offWhite)
...
